--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,8 +10,6 @@ name: Java CI with Gradle
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
 
 permissions:
   contents: read
@@ -28,7 +26,10 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+        
+    - name: Grant execute permission for gradle
+      run: chmod +x gradlew
+      
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
+      run: ./gradlew build
+      uses: mr-smithers-excellent
