--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,10 +26,7 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-        
-    - name: Grant execute permission for gradle
-      run: chmod +x gradlew
-      
     - name: Build with Gradle
-      run: ./gradlew build
-      uses: mr-smithers-excellent
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      with:
+        arguments: build
