--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,17 +16,11 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
+    - uses: actions/checkout@v2
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      uses: actions/setup-java@v1
       with:
-        arguments: build
+        gradle-version: 5.0
+      run: gradle build
